--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cloud_firestore_web: ^0.1.1+2
   firebase_core_web: ^0.1.1+2
   firebase_auth_web: ^0.1.3+1
+  firebase_database: ^3.1.6
+  provider: ^4.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
